--- a/css/reset-password.css
+++ b/css/reset-password.css
@@ -10,24 +10,19 @@ button:focus {
     outline: none;
 }
 
-input, .login-buttonMain-1 {
+input {
     font-family: 'Nunito', sans-serif;
     font-weight: 700;
 }
 
-.nav-login, .nav-user, .register-user {
-    display: none;
-}
-
-.main-div, .loggedin-div, .register-user, .reset-pw-div {
+.reset-pw-div {
     width: 20%;
     margin: 0px auto;
     margin-top: 150px;
     padding: 20px;
-    display: none;
 }
 
-.main-div input, .reset-pw-div input {
+.reset-pw-div input {
     display: block;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -41,24 +36,19 @@ input, .login-buttonMain-1 {
     -moz-transition: 0.3s;
 }
 
-.main-div input:focus {
-    border: 1px solid #777;
-}
-
-.login-buttonMain-1, .register-submit-button, .reset_password_button_submit {
+.reset_password_button_submit {
     background: #5d8ffc;
     color: #fff;
     border: 1px solid #5d8ffc;
     border-radius: 5px;
     padding: 15px;
-    display: block;
     width: 100%;
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
 }
 
-.main-div button:hover, .loggedin-div button:hover, .reset-pw-div button:hover {
+.reset-pw-div button:hover {
     background: #fff;
     color: #5d8ffc;
     border: 1px solid #5d8ffc;
@@ -67,20 +57,6 @@ input, .login-buttonMain-1 {
 
 .need-account-div {
     margin-top: 6px;
-}
-
-.register-user input {
-    display: block;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: #fff;
-    padding: 15px;
-    outline: none;
-    width: 100%;
-    margin-bottom: 20px;
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
 }
 
 .span_reset_error {
